opam-version: "2.0"
name:         "sage"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/sage"
bug-reports:  "https://github.com/dinosaure/sage/issues"
dev-repo:     "git+https://github.com/dinosaure/sage.git"
doc:          "https://dinosaure.github.io/sage/"
license:      "MIT"
synopsis:     "Safe and Agnostic I/O"
description: """safe and agnostic handler or I/O with GADT"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.07.0"}
  "dune"
  "base-bytes"
]
