(library
 (name sage)
 (public_name sage)
 (modules sage))

(library
 (name sage_caml)
 (public_name sage.caml)
 (modules sage_caml)
 (libraries sage))

(library
 (name sage_unix)
 (public_name sage.unix)
 (modules sage_unix)
 (libraries unix sage))

(library
 (name sage_lwt)
 (public_name sage.lwt)
 (modules sage_lwt)
 (libraries lwt sage))
